--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ var result10 = result9.replace(/!important !important;/gi, "!important;");
 
 
 document.getElementById("output_text").value = fontface + result10;
-console.log("result2의 값은 " + result2 + "입니다.");
+console.log("result2의 값은 " + result2 + "입니다!");
 }
 
 </script>
