--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ var result10 = result9.replace(/\$message_hide_delays/gi, "600s");
 
 
 document.getElementById("output_text").value = fontface + result10;
-console.log("text1의 값은 " + text_1 + "입니다.");
+console.log("text1의 값은 " + text_1 + "입니다!");
 }
 
 </script>
