--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ var result3 = result2.replace(/\\#log/gi, ".chat-container.chat-container-vertic
 var result4 = result3.replace(/\\.name/gi, ".message-username.message-username-top");
 var result5 = result4.replace(/\.message/gi, "div.message-card.message-card-left");
 var result6 = result5.replace(/\\.meta/g, ".chat-container.chat-container-vertical.chat-container-left");
-var result7 = result6.replace(/\\$font_face/gi, "'omyu_pretty'" + " !important");
+var result7 = result6.replace(/\$font_face/gi, "'omyu_pretty'" + " !important");
 var result8 = result7.replace(/\$background_color/gi, "none");
 var result9 = result8.replace(/!important !important;/gi, "!important;");
 var result10 = result9.replace(/\$message_hide_delays/gi, "600s");
