--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ var text_1 = document.getElementById("input_text").value;
 var fontface = "@font-face {\nfont-family: 'omyu_pretty';\nsrc: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-01@1.0/omyu_pretty.woff2') format('woff2');\nfont-weight: normal;\nfont-style: normal;\n}\nhtml { font-size: 15px; font-family: 'omyu_pretty' !important; background-color: rgba(0,0,0,0) }\n"
 
 /*누군가 완성해줘... replace 앞에는 대상 텍스트 뒤에는 뭘로 바꿀건지 정하는 메서드란말이에요...
-이거를 여러개 시전을 해서, 여러분만의 컨버터를 만드는겁니다. 흑흑*/ 
+이거를 여러개 시전을 해서, 여러분만의 컨버터를 만드는겁니다. 흑흑흑*/ 
 var result1 = text_1.replace(/;/gi," !important;");
 var result2 = result1.replace(/\$font_sizepx/gi, "15px");
 var result3 = result2.replace(/\\#log/gi, ".chat-container.chat-container-vertical.chat-container-left");
@@ -30,7 +30,6 @@ var result7 = result6.replace(/\$font_face/gi, "'omyu_pretty'" + " !important");
 var result8 = result7.replace(/\$background_color/gi, "none");
 var result9 = result8.replace(/!important !important;/gi, "!important;");
 var result10 = result9.replace(/\$message_hide_delays/gi, "600s");
-
 
 document.getElementById("output_text").value = fontface + result10;
 console.log("text1의 값은 " + text_1 + "입니다.");
