--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ var result9 = result8.replace(/!important !important;/gi, "!important;");
 var result10 = result9.replace(/\$message_hide_delays/gi, "600s");
 
 document.getElementById("output_text").value = fontface + result10;
-console.log("text1의 값은 " + text_1 + "입니다.");
+console.log("text1의 값은 " + text_1 + "입니다!");
 }
 
 </script>
