--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ var result7 = result6.replace(/\$font_face/gi, "'omyu_pretty'" + " !important");
 var result8 = result7.replace(/\$background_color/gi, "none");
 var result9 = result8.replace(/!important !important;/gi, "!important;");
 var result10 = result9.replace(/\$message_hide_delays/gi, "600s");
+var result11 = result10.replace(/\$text_color/gi, "\#ffffff");
 
 document.getElementById("output_text").value = fontface + result10;
 console.log("text1의 값은 " + text_1 + "입니다!");
