--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ var result11 = result10.replace(/\$text_color/gi, "\#ffffff");
 document.getElementById("output_text").value = fontface + result11;
 console.log("text1의 값은 " + text_1 + "입니다!");
 }
-//5번째 편집입니다.
+//5번째 편집입니다. 예예
 </script>
 </body>
 </html>
