--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ var text_color = document.getElementById("text_color").value;
 var fontface = "@font-face {\nfont-family: 'omyu_pretty';\nsrc: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-01@1.0/omyu_pretty.woff2') format('woff2');\nfont-weight: normal;\nfont-style: normal;\n}\nhtml { font-size: 15px; font-family: 'omyu_pretty' !important; background-color: rgba(0,0,0,0) }\n"
 
 if (document.getElementById("font_size").value = null){
-    alert("폰트 크기를 지정해주세요! 기본값:15");
+    alert("폰트 크기를 지정해주세요! 기본값:15px");
 } else {
 /*누군가 완성해줘... replace 앞에는 대상 텍스트 뒤에는 뭘로 바꿀건지 정하는 메서드란말이에요...
 이거를 여러개 시전을 해서, 여러분만의 컨버터를 만드는겁니다. 흑흑흑*/ 
