--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ var result10 = result9.replace(/\$message_hide_delays/gi, "600s");
 var result11 = result10.replace(/\$text_color/gi, text_color);
 
 document.getElementById("output_text").value = fontface + result11;
-console.log("text1의 값은 " + text_1 + "입니다!");
+console.log("text1의 값은 " + text_1 + "입니다.");
 }
 
 
